--- a/index.html
+++ b/index.html
@@ -97,8 +97,103 @@
             </div>
         </div>
     </div>
+    <div class="our-services">
+        <div class="service-content">
+
+            <a href="services.html">Our Services</a>
+            <p>We offer physiotherapy, occupational therapy and speech therapy in private homes,skilled nursing facilities and assisted living settings</p>
+            .
+        </div>
+
+        <div class="main-services">
+            <div class="services-icon">
+                <i class="fa-solid fa-stethoscope"></i>
+            </div>
+
+            <div class="inner-services-content">
+                <div class="service-content">
+                    <h2 >Medical Services</h2>
+                    <div class="categories">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Emergencies & consultations</p>
+                    </div>
+                    <div  class="categories">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Therapies</p>
+                    </div>
+                    <div  class="categories">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Nutritional services</p>
+                    </div>
+                    <div  class="categories">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Lab & Radiology</p>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+            <div class="services-icon1">
+                <i class="fa-solid fa-hospital-user"></i>
+            </div>
+
+            <div class="inner-services-content1">
+
+                <h2>Pharmacy</h2>
+                <div id="service-text" class="categories1">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Prescription refill</p>
+                </div>
+                <div  class="categories1">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Delivery of medication</p>
+                </div>
+                <div i class="categories1">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Prescription management</p>
+                </div>
+                <div  class="categories1">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Health & wellness information</p>
+                </div>
+            </div>
+
+            <div class="services-icon2">
+                <i class="fa-solid fa-hand-holding-medical"></i>
+            </div>
+
+            <div class="inner-services-content2">
+
+                <h2>Health Rentals</h2>
+                <div class="categories2">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Mobility & RespiratoryEquipment</p>
+                </div>
+                <div  class="categories2">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Wound Equipment</p>
+                </div>
+                <div  class="categories2">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Assistive devices</p>
+                </div>
+
+                <div  class="categories2">
+                    <i class="fa-solid fa-notes-medical"></i>
+                    <p>Incontinence supplies</p>
+                </div>
+            </div>
+        </div>
 
 
 
+
+
+
+    </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
