achievements & why us

--- a/index.html
+++ b/index.html
@@ -187,11 +187,71 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="achievements">
 
 
+        <div class="inner-achievements1">
+            <i class="fa-solid fa-user"></i>
+            <h1>200+</h1>
+            <h2>Qualified Practitioners</h2>
+        </div>
 
+        <div class="inner-achievements2">
+            <i class="fa-solid fa-user-doctor"></i>
+            <h1>100,000+</h1>
+            <h2>Patients Annually</h2>
+        </div>
 
+        <div class="inner-achievements3">
+            <i class="fa-solid fa-earth-africa"></i>
+            <h1>6</h1>
+            <h2>Countries</h2>
+        </div>
 
+    </div>
+
+    <div class="why-us">
+        <div class="main-us">
+            <div class="inner-us">
+                <img src="./images/alicia-petresc-c3KZP4azG6g-unsplash.jpg" alt="">
+            </div>
+
+            <div class="inner-us">
+                <h1>Why choose Us?</h1>
+                <div class="inner-us-content">
+                    <div class="main-inner-us">
+                        <div class="us-icons">
+                            <i class="fas fa-notes-medical"></i>
+                        </div>
+                        <div class="icon-content">
+                            <p>We offer quality services from highly trained specialists and healthcare proffesionals</p>
+                        </div>
+                    </div>
+
+                    <div class="main-inner-us">
+                        <div class="us-icons">
+                            <i class="fa-solid fa-hospital-user"></i>
+                        </div>
+                        <div class="icon-content">
+                            <p>We offer quality services from highly trained specialists and healthcare proffesionals</p>
+                        </div>
+                    </div>
+
+                    <div class="main-inner-us">
+                        <div class="us-icons">
+                            <i class="fa-solid fa-user-doctor"></i>
+                        </div>
+                        <div class="icon-content">
+                            <p>We offer quality services from highly trained specialists and healthcare proffesionals</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <script src="./script.js"></script>
