Our services javascript interactive code

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <div class="inner-services-content">
                 <div class="service-content">
-                    <h2 >Medical Services</h2>
+                    <h2>Medical Services</h2>
                     <div class="categories">
                         <i class="fa-solid fa-notes-medical"></i>
                         <p>Emergencies & consultations</p>
@@ -140,24 +140,27 @@
             </div>
 
             <div class="inner-services-content1">
+                <div class="service-content1">
+                    <h2>Pharmacy</h2>
+                    <div class="categories1">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Prescription refill</p>
+                    </div>
+                    <div  class="categories1">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Delivery of medication</p>
+                    </div>
+                    <div i class="categories1">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Prescription management</p>
+                    </div>
+                    <div  class="categories1">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Health & wellness information</p>
+                    </div>
+                </div>
 
-                <h2>Pharmacy</h2>
-                <div id="service-text" class="categories1">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Prescription refill</p>
-                </div>
-                <div  class="categories1">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Delivery of medication</p>
-                </div>
-                <div i class="categories1">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Prescription management</p>
-                </div>
-                <div  class="categories1">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Health & wellness information</p>
-                </div>
+
             </div>
 
             <div class="services-icon2">
@@ -165,25 +168,28 @@
             </div>
 
             <div class="inner-services-content2">
+                <div class="service-content2">
+                    <h2>Health Rentals</h2>
+                    <div class="categories2">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Mobility & RespiratoryEquipment</p>
+                    </div>
+                    <div  class="categories2">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Wound Equipment</p>
+                    </div>
+                    <div  class="categories2">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Assistive devices</p>
+                    </div>
 
-                <h2>Health Rentals</h2>
-                <div class="categories2">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Mobility & RespiratoryEquipment</p>
-                </div>
-                <div  class="categories2">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Wound Equipment</p>
-                </div>
-                <div  class="categories2">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Assistive devices</p>
+                    <div  class="categories2">
+                        <i class="fa-solid fa-notes-medical"></i>
+                        <p>Incontinence supplies</p>
+                    </div>
                 </div>
 
-                <div  class="categories2">
-                    <i class="fa-solid fa-notes-medical"></i>
-                    <p>Incontinence supplies</p>
-                </div>
+
             </div>
         </div>
 
@@ -194,14 +200,14 @@
 
         <div class="inner-achievements1">
             <i class="fa-solid fa-user"></i>
-            <h1>200+</h1>
-            <h2>Qualified Practitioners</h2>
+            <h1>100000+</h1>
+            <h2>Patients Annually</h2>
         </div>
 
         <div class="inner-achievements2">
             <i class="fa-solid fa-user-doctor"></i>
-            <h1>100,000+</h1>
-            <h2>Patients Annually</h2>
+            <h1>200+</h1>
+            <h2>qualified Physicians</h2>
         </div>
 
         <div class="inner-achievements3">
@@ -252,6 +258,10 @@
             </div>
 
         </div>
+    </div>
+
+    <div id="myDiv">
+        <p id="myText">Testimonials</p>
     </div>
 
     <script src="./script.js"></script>
