--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,9 +27,67 @@
             <a href="#">Get Started</a>
         </div>
     </header>
-    
-    <div class="container">
-        <div class="overlay"></div>
+
+    <div class="background">
+        <h1>About Us</h1>
+    </div>
+
+    <div class="about">
+        <div class="main-about">
+            <div class="inner-about">
+                <div class="about-content">
+                    <div class="buttons">
+                        <a href="#">Our Mission</a>
+                        <a href="#">What we do</a>
+                        <a href="#">Our goal</a>
+                    </div>
+
+                    <p>Our mission is to provide high-quality, personalized in-home
+                    healthcare services to individuals in need, while creating
+                    employment opportunities for qualified and licensed healthcare
+                     professionals. By leveraging technology and a team of healthcare
+                    professionals, we aim to improve the overall quality of healthcare
+                     in Kenya and alleviate the burden on overcrowded hospitals.
+                    Additionally, we strive to empower patients by allowing them to
+                    receive medical attention in the comfort of their own home, and
+                    to provide a wide range of services including telemedicine
+                     consultations, home health equipment rentals, and medication
+                    deliveries.</p>
+
+                    <div class="icons">
+
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="inner-about">
+                <div class="inner-about-image">
+                    <img src="./Images/viki-mohamad-hYcSP6SpoK0-unsplash.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="about">
+        <div class="main-about">
+            <div class="inner-about">
+                <div class="inner-about-image">
+                    <img src="./Images/national-cancer-institute-nR2C9AVzfHY-unsplash.jpg">
+                </div>
+            </div>
+
+            <div class="inner-about">
+                <h1> What do we do?</h1>
+
+                <p>We provide a wide range of in-home healthcare services to
+                    individuals in need. Our services include personalized treatment
+                    plans, Home health Aides, Telemedicine consultations, Home
+                    health equipment rentals and medical deliveries</p>
+
+            </div>
+
+        </div>
     </div>
 
 </body>
