--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -200,7 +203,7 @@
 
         <div class="inner-achievements1">
             <i class="fa-solid fa-user"></i>
-            <h1>100000+</h1>
+            <h1 1d="number1">100000+</h1>
             <h2>Patients Annually</h2>
         </div>
 
@@ -260,9 +263,129 @@
         </div>
     </div>
 
-    <div id="myDiv">
-        <p id="myText">Testimonials</p>
+    <div class="container">
+
+        <h1 class="title"><span>Testimonials </span></h1>
+        <div class="slides">
+            <div class="slide">
+                <img src="./Images/image1.jpg" alt="Image 1">
+                <div class="text">
+                    <h2>Sarah K.</h2>
+                    <p class="lowercase">"I've been using home haven services for a few months now and I have to say, I'm impressed.<br> The doctors and therapists are knowledgeable and always go above and beyond to make sure I receive the best possible care.<br> I find the website very user-friendly because it makes scheduling appointments a breeze. I highly recommend them."</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="./Images/image2.jpg" alt="Image 2">
+                <div class="text">
+                    <h2>Finley jr.</h2>
+                    <p class="lowercase">"Baby Naima had been suffering from a speech delay and we were recommended to try home haven. The speech therapist was really amazing and my child has made significant progress. The comfort of receiving quality therapy in our own home has been a game-changer. Any parent in need of therapy services for their child should try them."</p>
+                </div>
+            </div>
+
+            <div class="slide">
+                <img src="./Images/image3.jpg" alt="Image 2">
+                <div class="text">
+                    <h2>David P.</h2>
+                    <p class="lowercase">"As a senior citizen, I am hesitant about receiving medical care because i hate going to hospitals. My daughter hired a nurse from home haven for my pain management and I have never been so grateful. The healthcare professionals are so patient and kind. I'm glad I can receive quality medical care without leaving my home."</p>
+                </div>
+            </div>
+
+            <div class="slide">
+                <img src="./Images/image4.jpg" alt="Image 2">
+                <div class="text">
+                    <h2>John M.</h2>
+                    <p class="lowercase">"I was recently involved in an accident and needed physical therapy. I was pleased to learn about home haven and decided to give it a try. The exercises they gave me helped me recover faster than I expected. I'm grateful for the convenience and quality of care I received. I highly recommend this service to anyone in need of physical therapy."</p>
+                </div>
+            </div>
+
+        </div>
     </div>
+
+    <div class="our-team">
+        <div class="meet">
+            <div class="words">
+                <h1>Meet Our Lead Team</h1>
+            </div>
+
+            <div class="link">
+                <a href="./aboutUs.html">See Our Doctors</a>
+            </div>
+
+        </div>
+
+        <div class="card-box">
+            <div class="card">
+                <div class="ceo-image">
+                    <img src="./Images/WhatsApp Image 2023-01-29 at 18.01.36.jpg" alt="">
+                </div>
+                <h2 class="ceo-title">Dr. Lucy Maina</h2>
+                <p class="ceo-text">CEO & FOUNDER</p>
+                <div class="ceo-icons">
+                    <div class="fab fa-facebook"></div>
+                    <div class="fab fa-twitter"></div>
+                    <div class="fab fa-instagram"></div>
+                    <div class="fab fa-linkedin"></div>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div class="ceo-image">
+                    <img src="./Images/adetola-afolabi-_cpHtWae2ac-unsplash.jpg" alt="">
+                </div>
+                <h2 class="ceo-title">Dr. Patrick Muiruri</h2>
+                <p class="ceo-text">COO & CO-FOUNDER</p>
+                <div class="ceo-icons">
+                    <div class="fab fa-facebook"></div>
+                    <div class="fab fa-twitter"></div>
+                    <div class="fab fa-instagram"></div>
+                    <div class="fab fa-linkedin"></div>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div class="ceo-image">
+                    <img src="./Images/thisisengineering-raeng-ntZM993INp0-unsplash.jpg" alt="">
+                </div>
+                <h2 class="ceo-title">Eng.Richmond Raeng</h2>
+                <p class="ceo-text">Tech Lead</p>
+                <div class="ceo-icons">
+                    <div class="fab fa-facebook"></div>
+                    <div class="fab fa-twitter"></div>
+                    <div class="fab fa-instagram"></div>
+                    <div class="fab fa-linkedin"></div>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div class="ceo-image">
+                    <img src="./Images/humberto-chavez-FVh_yqLR9eA-unsplash.jpg" alt="">
+                </div>
+                <h2 class="ceo-title">Dr. Humberto Chavez</h2>
+                <p class="ceo-text">Chief Doctor</p>
+                <div class="ceo-icons">
+                    <div class="fab fa-facebook"></div>
+                    <div class="fab fa-twitter"></div>
+                    <div class="fab fa-instagram"></div>
+                    <div class="fab fa-linkedin"></div>
+                </div>
+
+            </div>
+
+
+        </div>
+
+
+
+
+    </div>
+
+
+
+
+
 
     <script src="./script.js"></script>
 </body>
