--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,9 +15,9 @@
         <img src="./images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" id="logo" alt="">
 
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="./index.html">Home</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="./services.html">Services</a>
             <a href="#">Gallery</a>
             <a href="#">FAQ</a>
             <a href="#">Contact</a>
@@ -45,13 +45,11 @@
                     <p>Our mission is to provide high-quality, personalized in-home
                     healthcare services to individuals in need, while creating
                     employment opportunities for qualified and licensed healthcare
-                     professionals. By leveraging technology and a team of healthcare
-                    professionals, we aim to improve the overall quality of healthcare
-                     in Kenya and alleviate the burden on overcrowded hospitals.
+                    professionals by leveraging technology.
                     Additionally, we strive to empower patients by allowing them to
                     receive medical attention in the comfort of their own home, and
                     to provide a wide range of services including telemedicine
-                     consultations, home health equipment rentals, and medication
+                    consultations, home health equipment rentals, and medication
                     deliveries.</p>
 
                     <div class="icons">
@@ -78,12 +76,68 @@
             </div>
 
             <div class="inner-about">
-                <h1> What do we do?</h1>
+                <div class="heading">
+                    <h1> What do we do?</h1>
+                    <p>We simplify healthcare for our patients by:</p>
 
-                <p>We provide a wide range of in-home healthcare services to
-                    individuals in need. Our services include personalized treatment
-                    plans, Home health Aides, Telemedicine consultations, Home
-                    health equipment rentals and medical deliveries</p>
+                </div>
+
+
+                <div class="content">
+                    <div class="batch">
+                        <div class="batch01">
+                            <i class="fa-solid fa-star"></i>
+                            <p>Elimination of long wait times for healthcare services
+                            </p>
+
+                        </div>
+                        <div class="batch02">
+                            <i class="fa-solid fa-star"></i>
+                            <p>Comprehensive range of in-home healthcare services including
+                                consultation and specialist care
+                            </p>
+
+                        </div>
+
+                        <div class="batch2">
+                            <i class="fa-solid fa-star"></i>
+                            <p>Support from laboratory technicians and radiologists
+                            </p>
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="batchy">
+
+                        <div class="batch2">
+                            <i class="fa-solid fa-star"></i>
+                            <p>providing experienced team of doctors with diverse specialties
+                            </p>
+
+                        </div>
+
+
+                        <div class="batch2">
+                            <i class="fa-solid fa-star"></i>
+                            <p>Convenient accessory services including medication delivery,
+                                prescription refills, and home health equipment rentals
+                            </p>
+
+                        </div>
+                        <div class="batch2">
+                            <i class="fa-solid fa-star"></i>
+                            <p>Patient education to empower individuals to take control of their
+                                own healthcare.</p>
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+
 
             </div>
 
