--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="./aboutUs.html">About</a>
-            <a href="#">Services</a>
+            <a href="./services.html">Services</a>
             <a href="#">Blog</a>
             <a href="#">FAQ</a>
             <a href="#">Contact</a>
@@ -379,6 +379,19 @@
 
 
 
+
+    </div>
+
+    <div class="footer">
+        <h1>Subscribe to our newsletter for the latest news</h1>
+        <div class="join-newsletter">
+            <div class="subscribe-input">
+                <input type="email" class="subscribe-input" placeholder="Enter your email">
+                <div class="submit-btn">
+                    <button type="submit" class="subscribe-submit">Subscribe</button>
+                </div>
+            </div>
+        </div>
 
     </div>
 
