--- a/services.html
+++ b/services.html
@@ -18,9 +18,9 @@
         <img src="./images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" id="logo" alt="">
 
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="./index.html">Home</a>
+            <a href="./aboutUs.html">About</a>
+            <a href="./services.html">Services</a>
             <a href="#">Gallery</a>
             <a href="#">FAQ</a>
             <a href="#">Contact</a>
@@ -33,6 +33,187 @@
 
     <div class="background">
         <h1>Our Services</h1>
+    </div>
+
+
+
+    <div class="our-services">
+        <div class="service-content">
+
+            <a href="services.html">Medical Services </a>
+
+        </div>
+
+        <div class="main-services">
+            <div class="services-icon">
+                <i class="fa-solid fa-stethoscope"></i>
+            </div>
+
+            <div class="inner-services-content">
+                <div class="service-content">
+                    <h2>24hrs Emergency</h2>
+                    <p>At Home Haven, we provide top-notch medical care for you and your loved ones in times of emergency.
+                        Our board certified emergency physicians, along with dedicated
+                        nurses, will stabilize your condition and guide you on the path to recovery. Our emergency department operates 24/7,
+                        ensuring you receive safe and efficient medical attention. Should you need further treatment,
+                        we will coordinate with other healthcare providers, including telemedicine specialists and
+                        transfer you to a hospital if necessary..</p>
+
+
+                </div>
+
+            </div>
+
+            <div class="services-icon1">
+                <i class="fa-solid fa-hospital-user"></i>
+            </div>
+
+            <div class="inner-services-content1">
+                <div class="service-content1">
+                    <h2>Consultations</h2>
+                    <p>Our doctors are proud to offer both home visit consultations and telemedicine
+                         consultations, so you can receive the care you need no matter where you are.
+                         With home visits, our doctor will come directly to your door, providing you
+                         with in-person attention. For those who prefer the ease and
+                         flexibility of virtual consultations, our telemedicine services allow you to
+                         connect with a doctor via video call. Say goodbye to long wait times, crowded waiting rooms, and the
+                         hassle of traveling to and from appointments. Let us bring top-notch medical care
+                         directly to you, </p>
+                </div>
+
+
+            </div>
+
+            <div class="services-icon2">
+                <i class="fa-solid fa-hand-holding-medical"></i>
+            </div>
+
+            <div class="inner-services-content2">
+                <div class="service-content2">
+                    <h2>Laboratory & Radiology</h2>
+                    <p>we offer top-notch laboratory and radiology services. Our professionals use
+                        state-of-the-art equipment to deliver accurate and reliable results quickly.
+                        Whether you need routine blood work or more complex imaging services, we've
+                        got you covered. With our in-home services, you can avoid the hassle
+                        of traveling to a clinic and can instead receive the care you need in a comfortable
+                        and familiar environment. Plus, our services are fully integrated with your
+                        electronic health records, ensuring a seamless experience from start to finish.
+
+                    </p>
+
+                    </div>
+
+
+
+            </div>
+        </div>
+
+        <div class="main-services">
+            <div class="services-icon">
+                <i class="fa-brands fa-nutritionix"></i>
+            </div>
+
+            <div class="inner-services-content">
+                <div class="service-content">
+                    <h2>Nutritional Services</h2>
+                    <p>Our nutritionists will patiently work with you to develop a customized meal plan that meets your unique
+                        needs, taking into account your health goals, dietary restrictions, workout plans and lifestyle.
+                        Whether you're looking to lose weight, manage a chronic condition, or simply improve your
+                        overall health, our nutrition services will provide you with the tools and support you need
+                        to achieve your goals. We believe that good nutrition is the foundation of good health, and
+                        our goal is to empower you to make the best choices for your well-being. With convenient
+                        in-home consultations, healthy meal delivery options, and ongoing support from our team
+                        of experts, our nutritional services are designed to make it easy for you to achieve and
+                        maintain a healthy, balanced diet. Contact us today to schedule your first consultation and
+                        start your journey to a healthier, happier you!</p>
+
+
+                </div>
+
+            </div>
+
+            <div class="services-icon1">
+                <i class="fa-solid fa-hospital-user"></i>
+            </div>
+
+            <div class="inner-services-content1">
+                <div class="service-content1">
+                    <h2>Psychiatry and Behavioral Health</h2>
+                    <p>We offer comprehensive psychiatry and behavioral health services to help you
+                        achieve your best possible mental and emotional well-being. Our psychiatrists
+                        and behavioral health specialists are dedicated to providing you with the care
+                        and support you need to manage a wide range of mental health concerns, including
+                        anxiety, depression, mood disorders, and more. Whether you're looking to improve
+                        your mental health, manage symptoms of a condition, or simply find a safe and
+                        supportive space to work through life's challenges, our psychiatry and behavioral
+                        health services are here to help. We believe in a holistic approach to mental health,
+                        and our treatments are tailored to meet your unique needs and goals. Contact us today to
+                        schedule a consultation and start your journey towards a brighter tomorrow.</p>
+                </div>
+
+
+            </div>
+
+            <div class="services-icon2">
+                <i class="fa-solid fa-hand-holding-medical"></i>
+            </div>
+
+            <div class="inner-services-content2">
+                <div class="service-content2">
+                    <h2>Therapies</h2>
+                    <p>Our team of experienced therapists offers a variety of therapies:<br>
+                        -physical therapy to help you recover
+                        from injuries, manage chronic conditions, and improve your overall physical function.<br>
+                        -pediatric therapy services designed to support children with developmental,
+                        behavioral, and learning difficulties.<br>
+                        -speech and language therapy services
+                        aimed at helping individuals overcome speech impediments and improve their
+                        communication skills.<br>
+                        -Our occupational therapy services help individuals perform
+                        their daily activities more effectively and independently.<br>
+                        -massage
+                        therapy to relieve stress and muscle pain, acupuncture to alleviate a variety of
+                        physical and emotional conditions,<br>
+                        -genetic counseling to help you understand
+                        the potential risks and benefits of genetic testing</p>
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="e-pharmacy">
+        <div class="pharmacy-content">
+
+            <a href="e-Pharmacy.html">E-Pharmacy </a>
+
+        </div>
+
+        <div class="pharmacy-text">
+            <p><span>Home Haven operates an e-pharmacy platform,</span> providing a convenient way
+                for patients <br>and others to order medical supplies, including prescription
+                refills and other medications.<br> Our platform also offers prescription management
+                services to help ensure that our<br> customers receive the medications they need in
+                a timely and efficient manner.<br> With our delivery service, we aim to make access to
+                vital medical supplies as seamless and easy as possible.</p>
+        </div>
+
+        <div class="pharmacy-icon1">
+
+            <a href="e-Pharmacy.html">Visit Our E-Pharmacy </a>
+
+        </div>
+        <div class="pharmacy-icon2">
+
+            <a href="e-Pharmacy.html">Apply to be one of our drivers </a>
+
+        </div>
+
+
+
+
     </div>
     
 </body>
