dropdown get started menu

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,8 +18,10 @@
             <a href="./index.html">Home</a>
             <a href="#">About</a>
             <a href="./services.html">Services</a>
-            <a href="#">Gallery</a>
-            <a href="#">FAQ</a>
+            <a href="#">Doctors</a>
+            <a href="#">Blog</a>
+            <a href="#">Join our caregivers</a>
+            <a href="./faq.html">FAQ</a>
             <a href="#">Contact</a>
         </nav>
         <div class="icons">
