--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@
             <a href="#">Home</a>
             <a href="./aboutUs.html">About</a>
             <a href="./services.html">Services</a>
+            <a href="#">Doctors</a>
             <a href="#">Blog</a>
-            <a href="#">FAQ</a>
+            <a href="#">Join our caregivers</a>
+            <a href="./faq.html">FAQ</a>
             <a href="#">Contact</a>
+
         </nav>
         <div class="icons">
             <div id="menubar" class="Fas fa-bars"></div>
-            <a href="#">Utilities</a>
+        </div>
+
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Get Started</button>
+            <div class="dropdown-content" id="myDropdown">
+                <a href="#">Find a doctor</a>
+                <a href="#">Create an Account</a>
+                <a href="#">visit Our Pharmacy</a>
+                <a href="#">Contact</a>
+            </div>
         </div>
 
     </header>
@@ -203,7 +215,7 @@
 
         <div class="inner-achievements1">
             <i class="fa-solid fa-user"></i>
-            <h1 1d="number1">100000+</h1>
+            <h1 1d="number1">100,000+</h1>
             <h2>Patients Annually</h2>
         </div>
 
@@ -383,7 +395,8 @@
     </div>
 
     <div class="footer">
-        <h1>Subscribe to our newsletter for the latest news</h1>
+        <h1>Subscribe to our newsletter </h1>
+        <h2>Stay updated with our latest news, trends in<br> healthcare and patient education</h2>
         <div class="join-newsletter">
             <div class="subscribe-input">
                 <input type="email" class="subscribe-input" placeholder="Enter your email">
@@ -392,6 +405,44 @@
                 </div>
             </div>
         </div>
+
+        <div class="line">
+            <hr>
+        </div>
+
+        <div class="main-footer">
+            <div class="inner-footer">
+                <img src="Images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" alt="">
+            </div>
+
+            <div class="inner-footer">
+                <h1>Heading</h1>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+            </div>
+
+            <div class="inner-footer">
+                <h1>Heading</h1>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+            </div>
+
+            <div class="inner-footer">
+                <h1>Heading</h1>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+                <a href="#">Home haven</a>
+            </div>
+        </div>
+    </div>
 
     </div>
 
