--- a/services.html
+++ b/services.html
@@ -20,9 +20,11 @@
         <nav class="navbar">
             <a href="./index.html">Home</a>
             <a href="./aboutUs.html">About</a>
-            <a href="./services.html">Services</a>
-            <a href="#">Gallery</a>
-            <a href="#">FAQ</a>
+            <a href="#">Services</a>
+            <a href="#">Doctors</a>
+            <a href="#">Blog</a>
+            <a href="#">Join our caregivers</a>
+            <a href="./faq.html">FAQ</a>
             <a href="#">Contact</a>
         </nav>
         <div class="icons">
