signup page and javascript functions

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Get Started</button>
             <div class="dropdown-content" id="myDropdown">
-                <a href="#">Find a doctor</a>
-                <a href="#">Create an Account</a>
+                <a href="#">Find a Doctor</a>
+                <a href="account.html">Patients account</a>
                 <a href="#">visit Our Pharmacy</a>
-                <a href="#">Contact</a>
+                <a href="#">Make a Health Rental</a>
             </div>
         </div>
 
