--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="header">
-        <img src="./images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" id="logo" alt="">
+        <img src="./Images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" id="logo" alt="">
 
         <nav class="navbar">
             <a href="./index.html">Home</a>
@@ -23,11 +23,22 @@
             <a href="#">Join our caregivers</a>
             <a href="./faq.html">FAQ</a>
             <a href="#">Contact</a>
+
         </nav>
         <div class="icons">
             <div id="menubar" class="Fas fa-bars"></div>
-            <a href="#">Get Started</a>
         </div>
+
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Get Started</button>
+            <div class="dropdown-content" id="myDropdown">
+                <a href="#">Find a Doctor</a>
+                <a href="account.html">Patients account</a>
+                <a href="#">visit Our Pharmacy</a>
+                <a href="#">Make a Health Rental</a>
+            </div>
+        </div>
+
     </header>
 
     <div class="background">
@@ -145,6 +156,8 @@
 
         </div>
     </div>
+
+    <script src="./about.js"></script>
 
 </body>
 </html>
