--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Our Services</title>
 
     <link rel="stylesheet" href="services.css">
 
@@ -15,7 +15,7 @@
 <body>
 
     <header class="header">
-        <img src="./images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" id="logo" alt="">
+        <img src="./Images/Pink Simple Creative And Professional Medical Home Logo Design Template.png" id="logo" alt="">
 
         <nav class="navbar">
             <a href="./index.html">Home</a>
@@ -26,11 +26,22 @@
             <a href="#">Join our caregivers</a>
             <a href="./faq.html">FAQ</a>
             <a href="#">Contact</a>
+
         </nav>
         <div class="icons">
             <div id="menubar" class="Fas fa-bars"></div>
-            <a href="#">Get Started</a>
         </div>
+
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Get Started</button>
+            <div class="dropdown-content" id="myDropdown">
+                <a href="#">Find a Doctor</a>
+                <a href="account.html">Patients account</a>
+                <a href="#">visit Our Pharmacy</a>
+                <a href="#">Make a Health Rental</a>
+            </div>
+        </div>
+
     </header>
 
     <div class="background">
@@ -217,6 +228,8 @@
 
 
     </div>
+
+    <script src="./services.js"></script>
     
 </body>
 </html>
