--- a/patientPortal.html
+++ b/patientPortal.html
@@ -45,17 +45,13 @@
 
     </header>
 
-    <div class="contents">
-        <div class="appointments">
-            <div class="icons">
-                <i class="fa-regular fa-calendar-days"></i>
-            </div>
-            <a href="appointments.html">My Appointments</a>
-            <div class="div">
-                <p>Make virtual and home visit appointments,
-                    manage your appointments and set reminders.
-                </p>
-            </div>
+    <div class="video-background">
+        <video autoplay muted loop>
+            <source src="./Images/Pink Simple Creative And Professional Medical Home Logo Design Template.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
+        <div class="content">
+        <!-- your content goes here -->
         </div>
     </div>
 
