--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Get Started</button>
             <div class="dropdown-content" id="myDropdown">
-                <a href="#">Find a Doctor</a>
-                <a href="account.html">Patients account</a>
+                <a href="#">Make appointment</a>
+                <a href="account.html">My Home Haven account</a>
                 <a href="#">visit Our Pharmacy</a>
                 <a href="#">Make a Health Rental</a>
             </div>
@@ -49,19 +49,38 @@
         <img src="./Images/accuray-MFSEP2g4YS0-unsplash.jpg" alt="">
 
         <div class="appointment">
-            <h3>Make Appointment</h3>
-            <div class="flexbox">
-                <div class="flexbox1">
-                    <p>Department</p>
-                    <input type="text" name="department">
-                    <p>Date</p>
-                    <input type="text" name="name"><br>
-
+            <div id="appointment-div">
+                <h2>Make an Appointment</h2>
+                <div class="info-container">
+                  <div class="services">
+                    <h3>Services Offered</h3>
+                    <ul>
+                      <li>Consultations</li>
+                      <li>physiotherapy</li>
+                      <li>Pediatric therapy</li>
+                      <li>Nutritional services</li>
+                      <li>Psychiatry and Behavioral Health</li>
+                      <li>speech and language therapy</li>
+                      <li>And more!</li>
+                    </ul>
+                  </div>
+                  <div class="divider"></div>
+                  <div class="hours">
+                    <h3>Opening Hours</h3>
+                    <ul>
+                      <li>Monday - Friday: 9am - 5pm</li>
+                      <li>Saturday: 9am - 12pm</li>
+                      <li>Sunday: Closed</li>
+                    </ul>
+                  </div>
                 </div>
+                <a href="appointment.html"><button>Schedule Appointment</button></a>
+              </div>
 
 
 
-            </div>
+
+
 
 
 
